# icfp2020

./: Cargo.toml  README.md
src/: graph.rs  lib.rs  machine.rs  main.rs  parse.rs  repl.rs
src/incinerator/: Cargo.toml  api.rs  bitmap.rs  handshake.rs  heap.rs  lib.rs  segment.rs  trace.rs
