[package]
name = "incinerator"
version = "0.0.1"
authors = ["ember arlynx <ember@lunar.town>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/incinerator"
description = "A concurrent garbage incinerator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[dev-dependencies]
quickcheck_macros = "0.9.1"
quickcheck= "0.9.2"

[dependencies]
thread_local = "1.0.1"
atomic_enum = { version = "0.1.1", path = "/Users/ember/Play/atomic_enum" }
parking_lot = "0.11.0"
once_cell = "1.5.2"
nested = "0.1.1"
